tests/ui/const-generics/issues/issue-68366.full.stderr
error[E0207]: the const parameter `N` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-68366.rs:11:7
   |
LL | impl <const N: usize> Collatz<{Some(N)}> {}
   |       ^^^^^^^^^^^^^^ unconstrained const parameter
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported
help: Either remove the type parameter 'N' or make use of it, for example ` for S<N>`.
   |
LL - impl <const N: usize> Collatz<{Some(N)}> {}
LL + impl <> Collatz<{Some(N)}> {}
   |

error[E0207]: the const parameter `N` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-68366.rs:17:6
   |
LL | impl<const N: usize> Foo {}
   |      ^^^^^^^^^^^^^^ unconstrained const parameter
   |
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported
help: Either remove the type parameter 'N' or make use of it, for example ` for S<N>`.
   |
LL - impl<const N: usize> Foo {}
LL + impl<> Foo {}
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0207`.
